refactor (setupMacOSXApplicationListener): warning: [deprecation] newInstance() in Class has been deprecated